Final code reformatting.